--- a/www/package.json
+++ b/www/package.json
@@ -6,6 +6,7 @@
   "author": "Cosmin Serdean <cosmoserdean@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "next": "^8.0.0-canary.2",
     "react": "16.7.0-alpha.0 - next",
     "react-dom": "16.7.0-alpha.0 - next"
