Removed test alias

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install: cd www
 before_deploy: cd ..
 deploy:
   - provider: script
-    script: npm install -g now && now --token=$NOW_TOKEN && now --token=$NOW_TOKEN alias travis-test.s.cserdean.me
+    script: npm install -g now && now --token=$NOW_TOKEN && now --token=$NOW_TOKEN alias s.cserdean.me
     on:
       branch: master
   - provider: script
